Fixed loading element jumping

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,8 +1,8 @@
 *{ box-sizing: border-box; margin :0; padding: 0;}
 body{ overflow: hidden; font-family: Lato; width: 100%; height: 100% ; background-color: #fff;}
-#container{ position: relative; width: 100%; height: 100%;}
+#container{ position: relative; width: 100%; height: 100%; overflow: hidden;}
 h1{ font-weight: 300; font-size: 4vw; margin-bottom: .5em;}
-#loading{ position: absolute; width: 90vw; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; font-style: Lato; pointer-events: none; opacity: 1; transition: opacity 250ms ease-in-out; -webkit-transition: opacity 250ms ease-in-out;}
+#loading{ position: absolute; width: 90vw; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; font-style: Lato; pointer-events: none; opacity: 0;}
 #directions{ position: absolute; width: 90vw; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; font-style: Lato; pointer-events: none; opacity: 0; transition: opacity 1s ease-in-out; -webkit-transition: opacity 1s ease-in-out;}
-.pulsate { -webkit-animation: pulsate 1s ease-in-out; -webkit-animation-iteration-count: infinite; opacity: 0.5;}
-@-webkit-keyframes pulsate { 0% { opacity: 0.1; } 50% { opacity: 1.0; } 100% { opacity: 0.1; } }
+.pulsate { -webkit-animation: pulsate 1s ease-in-out; -webkit-animation-iteration-count: infinite; opacity: 0;}
+@-webkit-keyframes pulsate { 0% { opacity: 0; } 50% { opacity: 1.0; } 100% { opacity: 0.1; } }
